# units-cpp

./: CMakeLists.txt  TODO  test.cpp
demo/: CMakeLists.txt  UnitDefinitions.cpp  UnitDefinitions.h  UnitText.h  main.cpp
src/: CMakeLists.txt  CompoundUnit.h  Dimension.cpp  Dimension.h  DimensionedValue.cpp  DimensionedValue.h  Unit.cpp  Unit.h  UnitDefinitions.cpp  UnitDefinitions.h  UnitText.cpp  UnitText.h
src/translations/: units.es_AR.ts
test/: CMakeLists.txt  CompoundUnitTest.cpp  DimensionTest.cpp  DimensionedValueTest.cpp  UnitTest.cpp
